--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ header h1 {
     padding: 10px 0 10px 10px;
     margin-bottom: 20px;
 }
+.unit-check {
+    margin-left: 45%;
+}
 
 @media screen and (max-width: 650px) {
     .container {
